<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtCreatureKey"
			android:text="@string/creatureKey"/>

		<TextView
			android:id="@+id/txtCreatureKey"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="5dip"
			android:textIsSelectable="true"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtName"
			android:text="@string/name"/>

		<EditText
			android:id="@+id/txtName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="2dip"
			android:ems="12"
			android:inputType="text"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtType"
			android:text="@string/type"/>

		<EditText
			android:id="@+id/txtType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="2dip"
			android:ems="12"
			android:inputType="text"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnPrev"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prev"/>

		<Button
			android:id="@+id/btnInsert"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/insert"/>

		<Button
			android:id="@+id/btnUpdate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/update"/>

		<Button
			android:id="@+id/btnDelete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete"/>

		<Button
			android:id="@+id/btnNext"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnDeleteAll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/deleteAll"/>
	</LinearLayout>
</LinearLayout>
